rss-bfb-ms-infra/k8s/book-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss-bfb-ms-book-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rss-bfb-ms-book
  template:
    metadata:
      labels:
        app: rss-bfb-ms-book
    spec:
      containers:
        - name: rss-bfb-ms-book
          image: rss/rss-bfb-ms-book
---
apiVersion: v1
kind: Service
metadata:
  name: rss-bfb-ms-book-srv
spec:
  selector:
    app: rss-bfb-ms-book
  ports:
    - name: rss-bfb-ms-book
      protocol: TCP
      port: 3000
      targetPort: 3000
