rss-bfb-ms-infra/k8s/store-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss-bfb-ms-store-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rss-bfb-ms-store
  template:
    metadata:
      labels:
        app: rss-bfb-ms-store
    spec:
      containers:
        - name: rss-bfb-ms-store
          image: rss/rss-bfb-ms-store
---
apiVersion: v1
kind: Service
metadata:
  name: rss-bfb-ms-store-srv
spec:
  selector:
    app: rss-bfb-ms-store
  ports:
    - name: rss-bfb-ms-store
      protocol: TCP
      port: 3000
      targetPort: 3000
