rss-bfb-ms-infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: bookstore.dev
      http:
        paths:
          - path: /api/books/?(.*)
            backend:
              serviceName: rss-bfb-ms-book-srv
              servicePort: 3000
          - path: /api/stores/?(.*)
            backend:
              serviceName: rss-bfb-ms-store-srv
              servicePort: 3000
